--- a/src/components/Auth/styles.scss
+++ b/src/components/Auth/styles.scss
@@ -1,12 +1,45 @@
-.form{
+.auth {
   display: flex;
   flex-direction: row;
   max-width: $max-page-width;
+  margin: 60px auto;
   width: 100%;
   font-weight: 600;
   font-size: $small-font-size;
   align-items: center;
   justify-content: center;
-  margin: 10px auto;
   text-transform: uppercase;
+  .row {
+    width: 100%;
+    .whiteBox {
+      @include borderBox(no);
+      display: flex;
+      flex-direction: column;
+      width: 30%;
+      align-items: center;
+      margin: 20px auto;
+      padding: 10px;
+      line-height: 20px;
+      p{
+        display: flex;
+        flex-direction: column;
+        margin: 15px;
+        text-align: center;
+        .change-link{
+          color:$light-blue;
+          cursor: pointer;
+        }
+      }
+    }
+    .img-box{
+      display: flex;
+      margin: 0 auto;
+      padding: 16px;
+      align-items: center;
+      justify-content: center;
+      img {
+        width: 450px;
+      }
+    }
+  }
 }
