--- a/src/components/Auth/styles.scss
+++ b/src/components/Auth/styles.scss
@@ -12,13 +12,14 @@
   .row {
     width: 100%;
     .whiteBox {
-      @include borderBox(no);
+      @include border-box(no);
       display: flex;
       flex-direction: column;
-      width: 30%;
+      width: 300px;
       align-items: center;
+      justify-content: center;
       margin: 20px auto;
-      padding: 10px;
+      padding: 20px;
       line-height: 20px;
       p{
         display: flex;
@@ -38,7 +39,7 @@
       align-items: center;
       justify-content: center;
       img {
-        width: 450px;
+        width: 300px;
       }
     }
   }
