--- a/src/components/AuthForms/styles.scss
+++ b/src/components/AuthForms/styles.scss
@@ -89,7 +89,7 @@
     }
   }
   .brown-button{
-    @include default-button(brown);
+    @include default-button(blue);
     svg{
       margin-right:10px;
     }
