--- a/src/config/_colors.scss
+++ b/src/config/_colors.scss
@@ -1,5 +1,5 @@
 $bg-color: #fafafa;
-$dark-blue: #003569;
+$dark-black: black;
 $dark-grey: #999;
 $light-blue: #3897f0;
-$dark-brown:#603A25
+$dark-blue:#EBB01A;
