Temp naver login

--- a/src/shared/formStyles.scss
+++ b/src/shared/formStyles.scss
@@ -11,8 +11,7 @@
     text-transform: uppercase;
     color: $dark-grey;
     font-weight: 600;
-    margin: 1px 0;
-    margin-bottom: 20px;
+    margin: 20px 0 20px 0;
     position: relative;
     &:before {
       content: "";
@@ -44,34 +43,6 @@
     input[type="submit"]{
       margin-top: 15px;
       width:100%;
-    }
-    .divider {
-      text-transform: uppercase;
-      color: $dark-grey;
-      font-weight: 600;
-      margin: 20px 0;
-      margin-bottom: 20px;
-      position: relative;
-      &:before {
-        content: "";
-        width: 42%;
-        position: absolute;
-        background-color: $dark-grey;
-        height: 1px;
-        left: 0;
-        top: 6px;
-        opacity: 0.8;
-      }
-      &:after {
-        content: "";
-        width: 42%;
-        position: absolute;
-        background-color: $dark-grey;
-        height: 1px;
-        right: 0;
-        top: 6px;
-        opacity: 0.8;
-      }
     }
     .text-input{
       border: 1px solid #efefef;
