--- a/src/config/_mixins.scss
+++ b/src/config/_mixins.scss
@@ -22,7 +22,7 @@
   }
 }
 
-@mixin border-box($radius) {
+@mixin borderBox($radius) {
   border: 1px solid #e6e6e6;
   background-color: white;
   @if $radius==yes {
